# pydraulics

./: README.md  pyproject.toml  setup.py  test.py  test_open_flow.py
.github/workflows/: ci.yml  publish-pypi.YML  publish-testpypi.yml
docs/: ci_cd_guide.md
pydraulics/: __init__.py
src/pydraulics/: __init__.py  channel.py  main.py
src/pydraulics/utils/: __init__.py  manning.py
tests/: test_channel_rect  test_channel_trap  test_utils_manning.py
