[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydraulics"
version = "0.1.6"
description = "A simple package in development for open and pipe flow in hydraulics."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Juan David Guerrero", email = "juanguerrero09mc@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pytest>=8.4.2",
    "sympy>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/juanguerrero09/pydraulics"
"Bug Tracker" = "https://github.com/juanguerrero09/pydraulics/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pydraulics = "pydraulics.main:main"
